# voxentia-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_DE.md  README_RU.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  run.bat  voxentia.ps1
backend/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements-reranking.txt  requirements.txt
core/: pyproject.toml
core/src/voxentia/capabilities/: __init__.py  registry.py
core/src/voxentia/config/: settings.py
core/src/voxentia/events/: __init__.py  bus.py
core/src/voxentia/observability/: __init__.py  tracing.py
core/src/voxentia/orchestrator/: __init__.py  ab_testing.py  intent_detector.py  model_router.py  pipeline.py  response_formatter.py  router.py
core/src/voxentia/plugins/: __init__.py  base.py  context.py  discovery.py  registry.py  scanner.py
core/src/voxentia/services/: llm_base.py  llm_client.py
core/src/voxentia/utils/: helpers.py  logging.py
data/: chat.db
deployment/: docker-compose.yml
docs/: index.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
i18n/: README.md
ollama_data/: id_ed25519  id_ed25519.pub
plugins/: core_assistant.py
scripts/: export_openapi.py  fix_motion_tags.py  migrate_encrypt_messages.py  patch_calendar_i18n.py  patch_learn_i18n.py  patch_project_i18n.py
tests/: conftest.py  test_ab_testing.py  test_api_chat.py  test_api_chat_stream.py  test_api_documents.py  (+24 more)
(+233 files in other folders)
